# reversi

./: CMakeLists.txt  README.md  reversi.cpp
